# Amazon-ELT-and-Recommendation-System

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  baseline.txt  notebook.html  notebook.ipynb  pyproject.toml  repo.md  requirements-dev.txt  requirements.txt  responses.txt  train_logres.txt  video_url.txt
.github/workflows/: ci.yml
common_scripts/: 01_build_user_purchase_counts.py  02_filter_important_users.py  03_user_features.py  04_create_train_data.py  05_train_model.py  check_03_user_features_uploads.py  data_io.py  data_registry_sync.py  eg_01_logs
configs/: data_registry.yaml  drive_config.yaml  pydrive_credentials.json
data/: decision_tree.txt  histgbm_results.txt  random_forest.txt  svm.txt  tree_forest_results.txt
data/global/: top_users.parquet
data/processed/: missing_categories.txt
data/processed/All_Beauty/: meta_stats_All_Beauty.json  review_stats_All_Beauty.json  top_user_review_stats_All_Beauty.json
data/processed/Amazon_Fashion/: meta_stats_Amazon_Fashion.json  review_stats_Amazon_Fashion.json  user_counts_Amazon_Fashion.parquet
data/processed/Appliances/: meta_stats_Appliances.json  review_stats_Appliances.json  user_counts_Appliances.parquet
data/raw/: all_categories.txt
mlruns/0/: meta.yaml
mlruns/374598659243218696/: meta.yaml
modeling/: train_histgbm_next_category.py  train_logreg_next_category.py  train_other_models_next_category.py
notebooks/: analysis.ipynb
scripts/: run_pipeline.py
src/amazon_next_category/: __init__.py
tests/: conftest.py  test_config.py  test_data_io.py
(+170 files in other folders)
